<resources>
    <string name="app_name">KTH Tech Shop</string>
    <string name="find_text">Tìm kiếm</string>
    <string name="back_text">Back</string>
    <string name="loading">Loading</string>
    <string name="loading_threeDot">Loading...</string>
    <string name="buy_now">Mua ngay</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Gender_Male">Nam</string>
    <string name="Gender_Female">Nữ</string>
    <string name="title_activity_test2">TestActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1474210003495771</string>
    <string name="fb_login_protocol_scheme">fb1474210003495771</string>
    <string name="facebook_client_token">325bf689c0a3f3b6cc98cf29f41a13f9</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>