<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.ProductListActivity">


        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.1"
                android:background="#ffff"
                android:contentDescription="@string/back_text"
                android:src="@drawable/ic_arrow_left_solid" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.85"
                android:padding="0dp"
                android:textColorHint="@color/main"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeColor="@color/main"
                app:boxStrokeWidth="1dp"
                app:cursorColor="#000"
                app:placeholderText="@string/find_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Global_ProductSearch_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_magnifying_glass_solid"
                    android:drawablePadding="10dp"
                    android:padding="0dp"
                    android:textAlignment="gravity"
                    android:textColor="@color/light_grey"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_menu_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1">

            <Button
                android:id="@+id/button2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:backgroundTint="#FFFFFF"
                android:padding="0dp"
                android:text="Mới nhất"
                android:textColor="#000000"
                android:textSize="14sp"
                app:cornerRadius="0dp"
                app:strokeColor="@color/main" />

            <Button
                android:id="@+id/button3"
                style="null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:backgroundTint="#FFFFFF"
                android:padding="10dp"
                android:text="Giá thấp nhất"
                android:textColor="#000000"
                android:textSize="14sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/button4"
                style="null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:backgroundTint="#FFFFFF"
                android:drawableEnd="@drawable/ic_star_yellow"
                android:drawablePadding="0dp"
                android:padding="0dp"
                android:text="5 sao"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="14sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/button5"
                style="null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:drawableEnd="@drawable/ic_filter_solid"
                android:text="Lọc"
                android:textColor="#000000"
                android:textSize="14sp"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productList_rclview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_menu_bar" />

        <TextView
            android:id="@+id/loadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B6B6B6"
            android:padding="4dp"
            android:text="@string/loading_threeDot"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productList_rclview" />

        <TextView
            android:id="@+id/no_product_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="Hiện tại không có sản phẩm nào"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_menu_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>