<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:nestedScrollingEnabled="false"
        tools:context=".activity_and_fragment.UserEditInfoActivity">

        <ImageButton
            android:id="@+id/Global_BackBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#ffff"
            android:contentDescription="@string/back_text"
            android:src="@drawable/ic_arrow_left_solid" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/main"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/UserEditInfoActivity_UserAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                android:src="@drawable/ic_user_solid"
                android:layout_gravity="center"
                android:background="@color/white"
                app:contentPadding="15dp"
                android:scaleType="fitCenter"
                app:strokeWidth="0dp" />

        </LinearLayout>

        <TextView
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingVertical="7dp"
            android:textColor="@color/main"
            android:text="Chỉnh sửa thông tin người dùng :" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/main"
            app:boxStrokeWidth="1dp"
            app:cursorColor="#000"
            app:hintTextColor="@color/light_grey"
            android:id="@+id/UserEditInfoActivity_UserNameTxtILayout"
            android:hint="User Name"
            app:errorTextAppearance="@color/main">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="5dp"
            app:hintTextColor="@color/light_grey"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/main"
            app:boxStrokeWidth="1dp"
            app:cursorColor="#000"
            android:id="@+id/UserEditInfoActivity_LastNameTxtILayout"

            android:hint="Họ">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/main"
            app:boxStrokeWidth="1dp"
            app:cursorColor="#000"
            app:hintTextColor="@color/light_grey"
            android:id="@+id/UserEditInfoActivity_FirstNameTxtILayout"

            android:hint="Tên">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giới Tính : "
                android:textSize="17sp"
                android:fontFamily="sans-serif-medium" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/UserEditInfoActivity_GenderRadioGr"
                android:gravity="center_horizontal">

                <RadioButton
                    android:theme="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender_Male"
                    android:id="@+id/UserEditInfoActivity_GenderMale"
                    android:paddingHorizontal="15dp"
                    android:checked="true"
                    android:buttonTintMode="multiply"
                    android:buttonTint="@color/main"
                    android:button="@drawable/radio_option_color" />

                <RadioButton
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/Gender_Female"
                    android:layout_marginStart="40dp"
                    android:paddingHorizontal="15dp"
                    android:buttonTintMode="multiply"
                    android:buttonTint="@color/main"
                    android:button="@drawable/radio_option_color"
                    android:id="@+id/UserEditInfoActivity_GenderFemale" />

            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_marginVertical="5dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/main"
            app:boxStrokeWidth="1dp"
            app:cursorColor="#000"
            app:hintTextColor="@color/light_grey"
            android:id="@+id/UserEditInfoActivity_PhoneNumberTxtILayout"
            android:hint="Số Điện Thoại">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/main"
            app:boxStrokeWidth="1dp"
            app:cursorColor="#000"
            app:hintTextColor="@color/light_grey"
            android:id="@+id/UserEditInfoActivity_EmailTxtILayout"

            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/main"
            app:boxStrokeWidth="1dp"
            app:cursorColor="#000"
            app:hintTextColor="@color/light_grey"
            android:id="@+id/UserEditInfoActivity_AddressTxtILayout"

            android:hint="Địa chỉ">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"

            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chỉnh sửa"
                android:id="@+id/UserEditInfoActivity_ConfirmBtn"
                android:backgroundTint="@color/main"
                android:textSize="16sp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:layout_gravity="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hủy Bỏ"
                android:id="@+id/UserEditInfoActivity_CancelBtn"
                android:backgroundTint="#E91E63"
                android:textSize="16sp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>